--- a/frontend/src/components/AnalysisViewer.css
+++ b/frontend/src/components/AnalysisViewer.css
@@ -658,10 +658,12 @@
 }
 
 .redirect-text {
-  font-size: 16px;
+  font-size: 22px;
   color: #555;
   line-height: 1.6;
   margin-bottom: 30px;
+  padding-left: 80px;
+  padding-right: 80px;
 }
 
 .reopen-results-button {
